@@ -324,7 +324,10 @@ primitives and interfaces as well as ordinary classes.
 **UPDATED 2026-08-30 — the scale half of this was changed, and this section
 did not say so.** `array_index_scale_for_name` now returns `0` for a non-array,
 not `1`: exactly the value the paragraph below argued for, landed during this
-campaign while the text kept describing the old behaviour. All four scale rows
+campaign while the text kept describing the old behaviour. **The reason given
+for it was wrong, though — see §25.1: the javadoc's "reported as zero" is about
+ARRAYS OF NARROW TYPES, not about non-arrays, and it was cited here as if it
+settled the non-array case.** All four scale rows
 (`String.class`, `int.class`, `Iface.class`, and the internal spelling) answer
 `0` today, so a caller following the documented
 `if (scale == 0) throw` guard now gets the refusal it is looking for.
@@ -1268,7 +1271,15 @@ as originally written, and this sentence was a false claim about
 After the fix, the `ClinitProbe` diff against HotSpot loses both rows: bci 157
 and bci 166 now match.
 
-### 17.2 What is deliberately NOT fixed
+### 17.2 What is deliberately NOT fixed — SUPERSEDED by §19
+
+> **This section is now WRONG and is kept for its reasoning, not its
+> conclusion.** The latch pair WAS repaired in §19: the R5 warn is 0 on
+> both H2 vectors and on the 40-line repro. What the text below gets
+> right is the mechanism; what it gets wrong is calling it unreachable,
+> because it assumed the repair had to SYNTHESISE an offset encoding.
+> It does not — `staticFieldOffset` mints AND REGISTERS, and making
+> the same call is what fixed it.
 
 `MEMORY_ACCESS_WARNED_BASE`/`_OFFSET` (bci 185/195) still hold their defaults,
 so the R5 warn still fires. Backfilling them needs the class mirror and this
@@ -1537,7 +1548,14 @@ files.
 their per-vector flags and classpath entries, so 4 of 120 exited non-zero and
 exercised less than the suite gives them.
 
-### 21.2 What this does and does not license
+### 21.2 What this does and does not license — SUPERSEDED by §24
+
+> **The refusal this section declines to make HAS since been made
+> (§24).** Two things changed: the count was widened to 136 Netty
+> buffer/util classes, and—the load-bearing correction—the rescues this
+> section is protecting run through the CLASSIFIED paths, not through
+> the case being refused. Re-reading the classifier instead of its
+> summary is what settled it.
 
 **Discharged for four workload families**: the regression corpus, H2, Spring
 Boot and Tomcat+SSL. Nothing in any of them reaches the fallback, and the
@@ -1591,6 +1609,11 @@ CratonVM matches a default-configured HotSpot — it claims those three rows are
 the oops mode and nothing else, which is now measured rather than assumed.
 
 ### 22.2 The mint row: measured to zero, and NOT changed — here is why
+
+> **SUPERSEDED by §23.** The reasoning below is kept because its
+> conclusion was wrong for an instructive reason: the claim that the
+> shared error enum is "matched exhaustively across the VM" was an
+> assertion, and one grep refuted it. The row IS closed now.
 
 `objectFieldOffset(Class, String)` for a name the class does not have: HotSpot
 throws `InternalError`, CratonVM mints a synthetic offset and routes it through
@@ -1654,3 +1677,242 @@ nothing measured and left to whoever can run WildFly.
 
 Nothing in the residual is now an unexplained difference, and nothing in it is
 explained by an untested assertion.
+
+## 23. The mint row, closed — and my "cross-cutting" claim was wrong
+
+§22.2 measured the mint to zero and then declined to change it, on this
+reasoning:
+
+> `RuntimeError` has **no `InternalError` variant** … Adding a variant means
+> editing a shared error enum that is matched exhaustively across the VM.
+
+**That was an assertion, and testing it took one grep.** `types/src/error.rs`
+has a *single* central mapper from `RuntimeError` to `(java class name,
+message)`. The change is one variant and one arm; `rustc` finds any other
+exhaustive match for free, and it found none — the build was clean first time.
+I had applied the "an untested explanation is an assertion" lesson to the
+oracle in §22.1 and not to my own reasoning three paragraphs later.
+
+### 23.1 The evidence, widened first
+
+Before changing a shared door, the population was extended past the corpus:
+
+| population | mints | null-base |
+| --- | --- | --- |
+| 120 regression vectors | 0 | 0 |
+| **136 Netty buffer/util classes** (103 PASS) | **0** | **0** |
+| Spring Boot + Tomcat/SSL (DoD, both `OK`) | 0 | 0 |
+| H2 `TestFullText` + `TestRecovery` | 0 | 0 |
+| positive controls (`MintReachProbe` / `NullBaseControl`) | **2** | **2** |
+
+Netty is the canonical heavy `Unsafe` consumer — array base offsets, off-heap
+access, `objectFieldOffset` — so it is a better witness for this surface than
+WildFly would have been. Its capture carries **710 `Post-clinit fixup` lines
+and 4192 cratonvm warn lines**, so the zeros are measurements.
+
+### 23.2 The refusal was too broad, and narrowing it fixed a second defect
+
+Refusing closed the row it was aimed at and immediately opened another:
+
+```text
+internal oFO(Class,String) static name
+    HotSpot |no-throw|      CratonVM |THREW java.lang.InternalError|
+```
+
+HotSpot accepts a **static** field name at this door. CratonVM's walk only
+reached statics behind an explicit `static:` prefix — a defensive branch for a
+mis-dispatching caller — so an ordinary static name fell through to the
+refusal.
+
+Adding the plain-name static walk is a fix in its own right, not just a
+narrowing: **the previous behaviour for that case was to mint an unregistered
+offset**, so a later get/CAS reached a phantom slot instead of the real static.
+It now registers through the same mint-and-register step
+`Unsafe.staticFieldOffset` uses — the number is inert, the registration is
+load-bearing, exactly as in §19.
+
+The refusal now fires only where nothing, instance or static, anywhere up the
+superclass chain, declares the name — which is precisely when HotSpot throws.
+
+### 23.3 Result
+
+```text
+sweep  12 changed lines (6 rows)   was 14 (7), and 20 (10) two sections ago
+null   20 changed lines (10 rows)  unchanged
+subword 0 · mode drift 0 · arms 119/119/79 · gates 5/5 RC=0
+```
+
+Every remaining sweep row is the non-array family of §4.3 — HotSpot's own
+broken refusal, four of whose six rows CratonVM already answers with the
+documented `0` sentinel.
+
+### 23.4 A netty number that is not a regression, and how that is known
+
+The post-change netty run scored `PASS=93 HANG=21` against the pre-change
+`PASS=103 HANG=5`. That looks like exactly the failure the mint's comment warns
+about — it was introduced to unblock lazy-init hangs.
+
+**It is not this change, and the reason is not a load argument.** The changed
+path *never executed*: the netty capture contains **0** occurrences of
+`InternalError`, **0** of `no such field`, and **0** mints, against a working
+denominator of 710 fixup lines. Code that did not run cannot hang a test.
+
+The load context is recorded but is not what the conclusion rests on: the
+baseline ran at load average 2.3, the comparison at **17.85 with 42 users**, so
+the two numbers are not comparable at all and the netty pass-count should not be
+read as a before/after. The landing evidence is the arms, gates, both DoD
+workloads and both H2 vectors, all green on this binary.
+
+## 24. The null-base refusal — §4.5's own fix, finally made
+
+§4.5 wrote this fix down two years of sessions ago in campaign time:
+
+> classify the offset in the null-base arm — arena-tagged, known static,
+> synthetic, or none of those — and refuse the fourth case with the
+> `IllegalArgumentException` that `setMemory`/`copyMemory` at address 0 already
+> produce. **The prerequisite is a count of what reaches the fallback on a real
+> workload.**
+
+§21 produced that count and §23 widened it to Netty. It is 0 everywhere, with a
+firing positive control in every population.
+
+### 24.1 What I had wrong, and it was the load-bearing part
+
+I twice declined this change citing §4.5's own warning that the fallback
+"unblocked the `ConcurrentHashMap.initTable` livelock and the WildFly/Spring
+Boot lazy-init hangs". **Those rescues do not run through the case being
+refused.** They run through the *classified* paths — an arena-tagged handle, a
+synthetic offset, a registered static field — and the classifier returns early
+for all three. Only the FOURTH case, an offset that is none of those, refuses.
+Re-reading the classifier rather than its summary is what changed the decision.
+
+So the change is much narrower than "refuse null-base accesses": the side store
+keeps every consumer it was built for.
+
+### 24.2 What the refused case actually was
+
+```text
+compareAndSwapInt(null, <unrecognised offset>, 0, 1)   ->   true
+```
+
+A CAS reporting success for a write nowhere any reader can see — the one thing
+a lock-free algorithm must never be told. HotSpot SIGSEGVs on it. Throwing is
+better than both, and it is what this VM already does for `setMemory`/
+`copyMemory` at address 0 (rows 27 and 28 of the same probe).
+
+### 24.3 Result
+
+`NullBaseControl` now exits 1 instead of printing `read |0| cas |true|`, and
+the probe rows moved:
+
+```text
+before   22 sun getInt(null, real offset)           |0|
+         24 sun compareAndSwapInt(null, real offset) |true|
+after    22 ... |THREW java.lang.IllegalArgumentException|
+         24 ... |THREW java.lang.IllegalArgumentException|
+```
+
+**The residual line count does not move, and that is expected**: HotSpot dies
+here, so a row can never match. What changed is the CATEGORY. All ten null rows
+are now §4.4's settled shape — *HotSpot SIGSEGVs, CratonVM throws a proper
+exception, CratonVM is better* — instead of one open question and five rows of
+silent success.
+
+### 24.4 A netty run that proves nothing, and how that was established
+
+The post-change netty run reported `NOTESTS=136` — every class finding zero
+tests. That is not a regression and not a pass: **the same fixture reports
+`found=0` on HOTSPOT too**, for both an abstract and a concrete class, right
+now. The netty test tree stopped yielding tests for either VM between the
+earlier run and this one — another lane rebuilding it is the obvious candidate,
+and it is not this lane's to chase.
+
+Recorded rather than quietly dropped, because "0 refusals fired" out of that run
+would have looked like supporting evidence and is worth nothing. The netty
+evidence that counts is the earlier run, when the suite really executed: 136
+classes, 187k captured lines, a 710-line denominator, **0 unclassified null-base
+hits** — which is precisely the measurement that says this refusal cannot fire
+there.
+
+### 24.5 Standing evidence for the change
+
+| check | result |
+| --- | --- |
+| gates | 5/5 RC=0, PERGATE-BAD=0 |
+| arms | 119 / 119 / 79, 0 failed |
+| mode drift | 0 on all three probes |
+| Spring Boot + Tomcat/SSL (DoD) | both `DOD RESULT OK` |
+| H2 `TestFullText` + `TestRecovery` | both rc=0 |
+| `NullBaseControl` (positive control) | fires — rc=1 |
+
+**Not run: WildFly, Keycloak, Elasticsearch** — not checked out on this host.
+The failure mode if one of them does reach the refused case is now a named
+`IllegalArgumentException` quoting the offset, rather than a CAS that lies.
+
+## 25. Two corrections, and a coverage boundary that explains this lane's harness
+
+### 25.1 A javadoc citation that does not say what it was cited for
+
+§4.3 and the source comment beside it both justified `arrayIndexScale(non-array)
+== 0` as *"what the long-standing `sun.misc` javadoc specifies"*. **It does not.**
+JDK 25's `jdk/internal/misc/Unsafe.java` reads:
+
+> arrays of "narrow" types will generally not work properly with accessors like
+> `getByte(Object, long)`, so the scale factor for such classes is reported as
+> zero
+
+That is about **arrays of narrow types**. The javadoc says nothing whatever
+about a non-array, and documents only the `NullPointerException` for null. The
+citation made a judgement call look like a settled reading of the spec.
+
+**The choice stands; its reason is now the honest one.** HotSpot *intends* a
+refusal here and fails to deliver it — it names `java/lang/InvalidClassException`,
+which does not exist, so the throw fails to link and the caller gets
+`NoClassDefFoundError`. Reproducing a botched throw would make this VM wrong on
+the day the JDK fixes it, and `0` is both the value callers guard on
+(`if (scale == 0) throw`) and the safe direction for anyone doing address
+arithmetic. Corrected in the source comment too, where it would otherwise
+mislead the next reader of that function.
+
+### 25.2 The regression suite cannot test a `jdk.internal.misc`-only API
+
+I tried to give the two refusals that landed in §23 and §24 a standing gate, by
+adding assertions to `RUnsafeArrayBase` — the same move that worked for the
+zeroed constants in §20. It fails, and the failure is worth more than the guard
+would have been:
+
+```text
+java -cp ... RUnsafeArrayBase        (no module flags — what the suite does)
+AssertionError: oFO(Class,String) refuses an absent field:
+    expected [java.lang.InternalError] got [harness-java.lang.IllegalAccessException]
+```
+
+**On HotSpot.** `run.sh` passes no `--add-opens` and no `--add-exports`.
+`sun.misc` is reachable anyway because `jdk.unsupported` opens it; **`jdk.internal.misc`
+is not.** The 2-arg `objectFieldOffset(Class, String)` exists *only* on the
+internal spelling, so no vector in this suite can reach it, on either VM.
+
+Reverted rather than landed — it would have reddened the vector in all three
+arms, and it reddens on the ORACLE, so no amount of VM work would have fixed it.
+
+**This is the coverage boundary that explains why this lane has its own
+harness.** `UnsafeShadowSweep` runs with `--add-exports java.base/jdk.internal.misc=ALL-UNNAMED`
+and diffs both spellings; the regression suite structurally cannot. Anything
+this campaign found on the `jdk.internal.misc` door — the sub-word atomics, the
+mint, the static-name narrowing — was invisible to the suite by construction,
+not by oversight.
+
+### 25.3 What actually guards the two refusals
+
+* **The mint refusal** is the sweep's own row (`internal oFO(Class,String)
+  missing name`). If it regresses, that row reappears and the sweep diff moves
+  from 12 back to 14 changed lines.
+* **The null-base refusal** cannot be guarded by a differential vector at all:
+  HotSpot SIGSEGVs on the call, so asking it would kill the oracle. That is why
+  `UnsafeNullArgProbe` runs one call per process, and why `NullBaseControl`
+  exists as its positive control.
+
+Both are checks a person must run, not gates. Stated plainly because a residual
+that is "covered by a probe nobody runs in CI" is covered in the same sense that
+`RUnsafeArrayBase` covered the array constants for as long as the defect
+existed — which is to say, not at all (§20).
